--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,46 @@
 
     <!--PthreeActionBarFragment-->
     <string name="PthreeTitle">資料の3/4を完備する</string>
+
+    <!--PtwoMainBodyFragment-->
+    <string name="PtwoIntroduction">2/4学歴</string>
+    <string name="school">学校名</string>
+    <string name="schoolHint">学校名を入力してください</string>
+    <string name="education">学歴</string>
+    <string name="educationHint">修士</string>
+    <string name="majorField">専攻分野</string>
+    <string name="majorFieldHint">専攻を入力してください</string>
+    <string name="admission">入学時間</string>
+    <string name="admissionHint">2015-09</string>
+    <string name="graduation">卒業時間</string>
+    <string name="graduationHint">2018-06</string>
+    <string name="PtwoButton">次へ</string>
+
+    <!--PthreeMainBodyFragment-->
+    <string name="PthreeIntroduction">3/4最近の勤務経験(新卒は直接に次へ)</string>
+    <string name="company">会社名</string>
+    <string name="companyHint">会社名を入力してください</string>
+    <string name="companySelector">会社名を非表示</string>
+    <string name="position">役職</string>
+    <string name="positionHint">役職を入力してください</string>
+    <string name="workTime">入退社期間</string>
+    <string name="startTime">2015-09</string>
+    <string name="endTime">今まで</string>
+    <string name="work">仕事内容</string>
+    <string name="workHint">簡単な記述可能,在個人履歴で編集可能!</string>
+
+    <!--PfourMainBodyFragment-->
+    <string name="PfourIntroduction">4/4ご希望の職種</string>
+    <string name="expectedPosition">期望的职位</string>
+    <string name="expectedPositionHint">PHPエンジニア</string>
+    <string name="remuneration">希望給料範囲</string>
+    <string name="remunerationHint">60万-80万</string>
+    <string name="desiredIndustry">希望の業種</string>
+    <string name="desiredIndustryHint">ゲーム | モバイルインタ…</string>
+    <string name="employmentForm">希望の雇用形態</string>
+    <string name="employmentFormHint">アルバイト | 新卒</string>
+    <string name="workAddress">希望の勤務地</string>
+    <string name="workAddressHint">東京都 | 大阪府</string>
+    <string name="advantage">個人アピール</string>
+    <string name="advantageHint">簡単な記述可能,在個人履歴で編集可能!</string>
 </resources>
