--- a/sample/exampleui/src/main/res/values/strings.xml
+++ b/sample/exampleui/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- Request permission start -->
     <string name="rationale_record_voice">This app needs access microphone to record voice.</string>
     <string name="rationale_photo">This app needs access photos.</string>
-    <string name="rationale_camera">This app needs access camera.</string>
+    <string name="rationale_camera">This app needs access camera.！！！</string>
     <!-- Request permission end -->
 
     <string-array name="messages_array">
