--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <!--loginMainBodyFragment-->
     <string name="LoginRequired">上記会員規約と個人情報の取り扱いに同意し会員登録</string>
     <string name="liIntroduction">ログイン</string>
-    <string name="liPhonePrefix">+81</string>
+    <string name="liPhonePrefix">+86</string>
     <string name="liPhoneHint">携帯番号を入力してください</string>
     <string name="liPassWordHint">パスワードを入力してください</string>
     <string name="liRegist">登録</string>
@@ -17,13 +17,15 @@
     <string name="liButton">ログイン</string>
     <string name="liAccountEmpty">アカウントは空にできません</string>
     <string name="liPasswordEmpty">パスワードは空にできません</string>
+    <string name="liCornerstoneError">まず会員規約と個人情報に同意してください</string>
+    <string name="liNetworkError">例外が発生しました。もう一度お試しください</string>
 
     <!--TrpActionBarFragment-->
     <string name="trpTitle">パスワードを再設定します</string>
 
     <!--TrpMainBodyFragment-->
     <string name="trpIntroduction">パスワードを再設定します</string>
-    <string name="trpPonePrefix">+81</string>
+    <string name="trpPonePrefix">+86</string>
     <string name="trpPhoneHint">携帯番号を入力してください</string>
     <string name="trpPasswordHint">新しいパスワードを入力してください</string>
     <string name="trpButton">次へ</string>
@@ -33,6 +35,8 @@
     <string name="btnCont">パスワードを再設定</string>
     <string name="verificationCode">確認コードを入力してください</string>
     <string name="codeErrorMessage">認証コードが間違いました,改めて入力してください!</string>
+    <string name="pvCodeEmpty">確認コードは空にできません</string>
+    <string name="pcCodeError">例外が発生しました。もう一度お試しください</string>
 
     <!--MtActionBarFragment-->
     <string name="mtTitle">SK直聘会員規約</string>
@@ -48,13 +52,15 @@
     <!--MrMainBodyFragment-->
     <string name="mrIntroduction">携帯番号で登録</string>
     <string name="mrHint">携帯番号を入力してください</string>
-    <string name="phonePrefix">+81</string>
+    <string name="phonePrefix">+86</string>
     <string name="ask">アカウントはありますか?</string>
     <string name="login">ここに押してログイン</string>
     <string name="accountMessage">このアカウントは存在していますので、改めて入力してく ださい!</string>
     <string name="mrButton">次へ</string>
     <string name="mrCornerstoneError">まず会員規約と個人情報に同意してください</string>
     <string name="mrTelephoneEmpty">携帯電話番号を入力してください</string>
+    <string name="mrTelephoneFormat">携帯電話番号を正しく入力してください</string>
+    <string name="mrNetworkError">例外が発生しました。もう一度お試しください</string>
 
     <!--SpActionBarFragment-->
     <string name="spTitle">パスワード設定</string>
@@ -91,6 +97,7 @@
     <string name="IiPersonalSkills">個人スキル</string>
     <string name="IiPersonalSkillsHint">3つに満たないスキルで入力してください</string>
     <string name="IiButtonText">次へ</string>
+    <string name="IiImage">写真の選択</string>
 
     <!--WsListFragment-->
     <string name="jobSearchStatus">求職状態</string>
