--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">IMUISample</string>
-
+    <string name="app_name">SK_android</string>
     <string name="input_hint">发送消息</string>
     <string name="message_click_hint">点击消息事件</string>
     <string name="message_long_click_hint">长按消息事件</string>
