[update]merge some files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,7 @@
     <string name="admissionHint">2015-09</string>
     <string name="graduation">卒業時間</string>
     <string name="graduationHint">2018-06</string>
-    <string name="PtwoButton">次へ</string>
+    <string name="PtwoButton">完成</string>
     <string name="educationOne">高校</string>
     <string name="educationTwo">スペシャリスト</string>
     <string name="educationThree">大学</string>
@@ -157,6 +157,7 @@
     <string name="endTime">今まで</string>
     <string name="work">仕事内容</string>
     <string name="workHint">簡単な記述可能,在個人履歴で編集可能!</string>
+    <string name="jumpOver">飛び越え</string>
 
     <!--PfourMainBodyFragment-->
     <string name="PfourIntroduction">4/4ご希望の職種</string>
@@ -165,13 +166,19 @@
     <string name="remuneration">希望給料範囲</string>
     <string name="remunerationHint">60万-80万</string>
     <string name="desiredIndustry">希望の業種</string>
-    <string name="desiredIndustryHint">ゲーム | モバイルインタ…</string>
-    <string name="employmentForm">希望の雇用形態</string>
-    <string name="employmentFormHint">アルバイト | 新卒</string>
+    <string name="desiredIndustryHint">パートタイム</string>
+    <string name="employmentForm">仕事の採用方法</string>
+    <string name="employmentFormHint">企業が直任する</string>
     <string name="workAddress">希望の勤務地</string>
     <string name="workAddressHint">東京都 | 大阪府</string>
     <string name="advantage">個人アピール</string>
     <string name="advantageHint">簡単な記述可能,在個人履歴で編集可能!</string>
+    <string name="hourly">时薪</string>
+    <string name="startHourly">10K</string>
+    <string name="endHourly">20K</string>
+    <string name="overseas">海外採用を受ける</string>
+    <string name="overseasTrue">は</string>
+    <string name="overseasFalse">いいえ</string>
 
     <!--PsActionBarFragment-->
     <string name="personName">張魏</string>
