--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,7 +144,7 @@
     <string name="educationFour">医者</string>
     <string name="educationFive">研究生</string>
     <string name="educationSix">博士</string>
-
+    <string name="resumeSuffix">-の履歴書</string>
     <!--PthreeMainBodyFragment-->
     <string name="PthreeIntroduction">3/4最近の勤務経験(新卒は直接に次へ)</string>
     <string name="company">会社名</string>
@@ -169,13 +169,23 @@
     <string name="desiredIndustryHint">パートタイム</string>
     <string name="employmentForm">仕事の採用方法</string>
     <string name="employmentFormHint">企業が直任する</string>
+    <string name="headHunting">ヘッドハンティング推薦</string>
     <string name="workAddress">希望の勤務地</string>
     <string name="workAddressHint">東京都 | 大阪府</string>
     <string name="advantage">個人アピール</string>
     <string name="advantageHint">簡単な記述可能,在個人履歴で編集可能!</string>
     <string name="hourly">时薪</string>
+    <string name="daySalary">日給</string>
+    <string name="monthSalary">月給</string>
+    <string name="yearSalary">年間給与</string>
     <string name="startHourly">10K</string>
+    <string name="threeThousand">30K</string>
+    <string name="fourThousand">40k</string>
+    <string name="fiveThousand">50k</string>
+    <string name="sixThousand">60k</string>
     <string name="endHourly">20K</string>
+    <string name="fullTime">フルタイム</string>
+    <string name="partTime">パートタイム</string>
     <string name="overseas">海外採用を受ける</string>
     <string name="overseasTrue">は</string>
     <string name="overseasFalse">いいえ</string>
