--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,9 @@
     <!--IiActionBarFragment-->
     <string name="IiTitle">資料の1/4を完備する</string>
 
+    <!--PersonInformation-->
+    <string name="piTitle">基本信息</string>
+
     <!--IiMainBodyFragment-->
     <string name="IiIntroduction">1/4基本情報</string>
     <string name="IiName">お名前</string>
