--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="trpPasswordHint">新しいパスワードを入力してください</string>
     <string name="trpButton">次へ</string>
     <string name="trpPhoneError">電話フォーマットが正しくありません</string>
-    <string name="trpPasswordError">パスワードの形式が正しくありません</string>
+    <string name="trpPasswordError">密码不可为空,且格式为....</string>
 
     <!--pvMainBodyFragment-->
     <string name="pvIntroduction">認証コードを入力</string>
