--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -281,6 +281,14 @@
     <string name="jmTitle">就職希望管理</string>
     <string name="jmStateTitle">求職ステータス</string>
 
+    <!--FlMainBodyFragment-->
+    <string name="flIntroduction">ベテランの視覚デザイナー</string>
+    <string name="flNotFind">停止招聘</string>
+    <string name="flAddress">東京</string>
+    <string name="flNumber">1～3</string>
+    <string name="flFirst">大卒</string>
+    <string name="flPosition">ジャさん·社長</string>
+    <string name="flClose">该职位已关闭</string>
 
     <string name="permission_request_denied">Permission request denied</string>
     <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
