--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,7 @@
     <string name="IiTitle">資料の1/4を完備する</string>
 
     <!--PersonInformation-->
-    <string name="piTitle">基本信息</string>
+    <string name="piTitle">基本情報</string>
 
     <!--IiMainBodyFragment-->
     <string name="IiIntroduction">1/4基本情報</string>
@@ -218,7 +218,7 @@
     <string name="favorite">お気に入り</string>
     <string name="webResume">履歴書</string>
     <string name="fileResume">自作の履歴書</string>
-    <string name="hopeIndustry">就職希望</string>
+    <string name="hopeIndustry">就職希望管理</string>
     <string name="customsCompany">フォローしている会社</string>
     <string name="privacySettings">プライバシー設定</string>
     <string name="reisukeSukesuke">ヘルプとフィードバック</string>
@@ -231,7 +231,7 @@
     <!--FaMainBodyFragment-->
     <string name="faceCompany">任天堂株式会社</string>
     <string name="reserved">予約済み</string>
-    <string name="facePosition">職位</string>
+    <string name="facePosition">役職</string>
     <string name="faceNavi">ナビ</string>
     <string name="faceChat">チャット</string>
     <string name="faceTime">2019-03-13 10:30</string>
