--- a/chatinput/src/main/res/values-zh-rCN/strings.xml
+++ b/chatinput/src/main/res/values-zh-rCN/strings.xml
@@ -3,6 +3,8 @@
 
     <!-- chat input start -->
     <string name="send">发送</string>
+    
+    <!-- 按住说话 -->
     <string name="record_voice_hint">按住说话</string>
     <string name="release_send_voice_hint">释放发送</string>
     <string name="cancel_record_voice_hint">取消录音</string>
