--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,7 +222,7 @@
     <string name="favorite">お気に入り</string>
     <string name="webResume">履歴書</string>
     <string name="fileResume">自作の履歴書</string>
-    <string name="hopeIndustry">求職ステータス</string>
+    <string name="hopeIndustry">就職希望</string>
     <string name="customsCompany">フォローしている会社</string>
     <string name="privacySettings">プライバシー設定</string>
     <string name="reisukeSukesuke">ヘルプとフィードバック</string>
