--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="liPasswordEmpty">パスワードを入力してください</string>
     <string name="liUnqualifiedPassword">パスワードの形式が正しくありません</string>
     <string name="liCornerstoneError">まず会員規約と個人情報に同意してください</string>
-    <string name="liNetworkError">例外が発生しました。もう一度お試しください</string>
+    <string name="liNetworkError">エラーが発生しましたので、もう一回試してください。</string>
 
     <!--TrpActionBarFragment-->
     <string name="trpTitle">パスワードを再設定します</string>
@@ -34,8 +34,8 @@
     <string name="trpPhoneHint">携帯番号を入力してください</string>
     <string name="trpPasswordHint">新しいパスワードを入力してください</string>
     <string name="trpButton">次へ</string>
-    <string name="trpPhoneError">電話フォーマットが正しくありません</string>
-    <string name="trpPasswordError">密码不可为空,且格式为....</string>
+    <string name="trpPhoneError">正しい携帯番号を入力してください</string>
+    <string name="trpPasswordError">パスワードは8-16桁で数字とアルファベットの組合せ</string>
 
     <!--pvMainBodyFragment-->
     <string name="pvIntroduction">認証コードを入力</string>
@@ -78,7 +78,7 @@
     <!--SpMainBodyFragment-->
     <string name="spIntroduction">パスワード設定</string>
     <string name="spEmail">パスワードを入力してください</string>
-    <string name="spPassword">新しいパスワードを入力してください</string>
+    <string name="spPassword">パスワードをもう一度入力してください</string>
     <string name="spButton">完成</string>
     <string name="spRemind">パスワードが設定された後、携帯番号+パスワードの形で ログインできます。</string>
     <string name="spPasswordError">パスワードは8-16桁で数字とアルファベットの組合せ</string>
