[Update]修改页面问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
     <string name="IiIntroduction">1/4基本情報</string>
     <string name="IiName">お名前</string>
     <string name="IiNameHint">名</string>
-    <string name="IiGender">性别</string>
+    <string name="IiGender">性別</string>
     <string name="IiMan">男</string>
     <string name="IiWoMan">女</string>
     <string name="IiPhone">携帯番号</string>
