--- a/chatinput/src/main/res/values-zh-rCN/strings.xml
+++ b/chatinput/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
     <!--发送-->
     <string name="send">送信</string>
     <!--按住说话-->
-    <string name="record_voice_hint">再生</string>
+    <string name="record_voice_hint">押したまま話す</string>
     <string name="release_send_voice_hint">释放发送</string>
     <!--取消录音-->
     <string name="cancel_record_voice_hint">録音を取り消し</string>
