--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="pvRsend">もう一回送ります</string>
     <string name="btnCont">パスワードを再設定</string>
     <string name="pvButton">次へ</string>
-    <string name="verificationCode">認証コードを入力</string>
+    <string name="verificationCode">認証コードを入力してください</string>
     <string name="codeErrorMessage">認証コードが間違いました,改めて入力してください!</string>
     <string name="pvCodeEmpty">確認コードは空にできません</string>
     <string name="pcCodeError">例外が発生しました。もう一度お試しください</string>
