--- a/chatinput/src/main/res/values-zh-rCN/strings.xml
+++ b/chatinput/src/main/res/values-zh-rCN/strings.xml
@@ -10,7 +10,7 @@
     <!--取消录音-->
     <string name="cancel_record_voice_hint">録音を取り消し</string>
     <!--录音试听-->
-    <string name="preview_play_audio_hint">オーディション</string>
+    <string name="preview_play_audio_hint">试听语音</string>
     <!--取消-->
     <string name="cancel">キャンセル</string>
     <string name="rest_record_time_hint">还可以说%s秒</string>
