解决进入地址选择页面偶退现象

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,6 +299,9 @@
     <string name="jlWantMoney">希望給料</string>
     <string name="jlFindType">雇用形態</string>
 
+    <!--CitySelectActivity-->
+    <string name="addressGeting">取得中...</string>
+    <string name="addressGetFail">取得失敗</string>
 
 
     <string name="permission_request_denied">Permission request denied</string>
